--- a/main.css
+++ b/main.css
@@ -270,7 +270,7 @@ a.active, a:hover {
 .header {
 	background-color: var(--dark-purple);
 	margin: 0px 0px;
-	padding: 200px 0;
+	padding: 250px 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -282,7 +282,7 @@ a.active, a:hover {
 	display: flex;
 	justify-content: center;
 	font-size: 54px;
-	margin-top: 160px;
+	/* margin-top: 160px; */
 	font-family: Optima, san-serif;
 	font-weight: 100;
 }
@@ -577,6 +577,9 @@ a.active, a:hover {
 }
 
 @media (max-width: 858px) {
+	.header {
+		padding: 150px 0;
+	}
 	.header h2 {
 		font-size: 40px;
 	}
@@ -646,6 +649,9 @@ a.active, a:hover {
 }
 
 @media(max-width: 550px) {
+	.header {
+		padding: 125px 0;
+	}
 	.box.left-image{
 		max-height: 250px;
 		min-width: 250px;
