--- a/main.css
+++ b/main.css
@@ -23,6 +23,10 @@ form {
 	position:relative;
 }
 
+h1 {
+	color: var(--dark-purple);
+}
+
 .services h4 {
 	padding: 3%;
 }
@@ -221,6 +225,11 @@ label {
 	text-decoration: none;
 	list-style: none;
 	box-sizing: border-box;
+}
+
+h2 {
+	font-style: italic;
+	color: var(--dark-gray);
 }
 
 h3 {
