--- a/main.css
+++ b/main.css
@@ -341,7 +341,7 @@ a.active, a:hover {
 }
 
 .header h3 {
-	font-family: Apple Chancery, cursive;
+	/* font-family: Apple Chancery, cursive; */
 	color: var(--light-gray);
 	margin-top: 20px;
 	font-size: 20px;
