--- a/main.css
+++ b/main.css
@@ -341,7 +341,6 @@ a.active, a:hover {
 }
 
 .header h3 {
-	/* font-family: Apple Chancery, cursive; */
 	color: var(--light-gray);
 	margin-top: 20px;
 	font-size: 20px;
@@ -634,7 +633,6 @@ a.active, a:hover {
 		padding-top: 5%;
 	}
 	.header h3 {
-		font-family: Apple Chancery, cursive;
 		color: var(--light-gray);
 		font-size: 18px;
 	}
@@ -649,7 +647,7 @@ a.active, a:hover {
 	}
 	ul {
 		position: fixed;
-		width: 100%
+		width: 100%;
 		height: 100vh;
 		background: var(--dark-purple);
 		top: 70px;
