--- a/main.css
+++ b/main.css
@@ -374,11 +374,8 @@ a.active, a:hover {
 	background-color: white;
 	flex-direction: row;
 	justify-content: space-around;
-	animation-delay: 0.5s;
-	animation-duration: 2s;
-	border-color: var(--light-gray);
-	border-style: outset;
-	border-width: 1px
+	box-shadow: 0 6px 20px rgba(0, 0, 0, 0.05);
+  	transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .service-text {
 	width: 70%;
@@ -457,10 +454,11 @@ a.active, a:hover {
 
 .box {
 	padding: 100px;
-	border-style: outset;
+	/* border-style: outset; */
 	background-color: white;
+	box-shadow: 0 6px 20px rgba(0, 0, 0, 0.05);
+  	transition: transform 0.3s ease, box-shadow 0.3s ease;
 	border-width: 4px;
-	border-color: var(--light-gray);
 	display: flex;
 	align-items: center;
 }
@@ -972,29 +970,7 @@ a.active, a:hover {
     justify-content: center;
 }
 
-/* Headings and paragraphs */
-/* .text-about h3 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-} */
 
-/* .text-about p {
-    font-size: 1.8rem;
-    line-height: 2.4;
-    margin-bottom: 18px;
-    color: #333;
-} */
-
-/* Links */
-/* .text-about a {
-    color: #007acc;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.text-about a:hover {
-    color: #005a99;
-} */
 
 /* Responsive adjustments */
 @media (max-width: 768px) {
